Add the test binary for Lock

--- a/tests/CMakeLists.txt
+++ b/tests/CMakeLists.txt
@@ -2,7 +2,7 @@ set(CMAKE_CXX_STANDARD 17)
 
 set(REPORT_DIR ${CMAKE_CURRENT_BINARY_DIR}/reports/)
 
-# Build and set up the Dummy test
+# Build and set up the unit test
 add_executable(gtest_Lock gtest_Lock.cpp)
 target_link_libraries(gtest_Lock PRIVATE Challenge::Lock GTest::Main)
 
@@ -12,3 +12,7 @@ gtest_discover_tests( gtest_Lock
     DISCOVERY_TIMEOUT ${GTEST_TIMEOUT}
     )
 
+# Build the test binary
+add_executable(test_lock test_lock.cpp)
+target_link_libraries(test_lock PRIVATE Challenge::Lock)
+install(TARGETS test_lock DESTINATION bin)
