--- a/src/Lock/CMakeLists.txt
+++ b/src/Lock/CMakeLists.txt
@@ -2,14 +2,19 @@ set(CMAKE_CXX_STANDARD 17)
 
 set(SRCS
     ProbSync.cpp
+    PetersonSync.cpp
     )
 
 set(HEADERS_DIR
-    ${PROJECT_SOURCE_DIR}/include/Challenge/Lock
+    ${PROJECT_SOURCE_DIR}/include/Challenge
     )
 
 set(HEADERS_PUB
     ${HEADERS_DIR}/Lock.hpp
+    ${HEADERS_DIR}/Lock/Lock.hpp
+    ${HEADERS_DIR}/Lock/SyncObject.hpp
+    ${HEADERS_DIR}/Lock/ProbSync.hpp
+    ${HEADERS_DIR}/Lock/PetersonSync.hpp
     )
 
 add_library(Lock SHARED ${SRCS} ${HEADERS_PUB} )
