Add test_set algorithm

--- a/src/Lock/CMakeLists.txt
+++ b/src/Lock/CMakeLists.txt
@@ -3,6 +3,7 @@ set(CMAKE_CXX_STANDARD 17)
 set(SRCS
     ProbSync.cpp
     PetersonSync.cpp
+    TestSetSync.cpp
     )
 
 set(HEADERS_DIR
@@ -15,6 +16,7 @@ set(HEADERS_PUB
     ${HEADERS_DIR}/Lock/SyncObject.hpp
     ${HEADERS_DIR}/Lock/ProbSync.hpp
     ${HEADERS_DIR}/Lock/PetersonSync.hpp
+    ${HEADERS_DIR}/Lock/TestSetSync.hpp
     )
 
 add_library(Lock SHARED ${SRCS} ${HEADERS_PUB} )
